small fixes and scrollbar is back!

--- a/src/App.css
+++ b/src/App.css
@@ -8,18 +8,13 @@
   src: local('EB Garamond'), url(./assets/fonts/EBGaramond-Medium.ttf) format('truetype');
 }
 
-html {
+html, body {
   scroll-behavior: smooth;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
   font-family: 'EB Garamond', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
-  overflow-y: scroll;
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none;  /* Internet Explorer 10+ */
-}
-
-::-webkit-scrollbar {
-  display: none;
 }
