--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,13 +1,14 @@
 body{
     background-color: #FFEFD5;
     font-family: "EB Garamond";
+    font-size: 1dvw;
 }
 
 
 .video-background {
     position: relative;
-    top: -20vh;
-    height: 90vh;
+    top: -0dvh;
+    height: 90dvh;
     width: 100%;
 }
 
@@ -15,13 +16,14 @@ video {
     margin: 0;
     padding: 0;
     width: 100%;
-    object-fit: cover;
+    height: 100%;
+    object-fit: fill;
 }
 
 .row.home {
     width: 100%;
     position: absolute;
-    height: 100vh;
+    height: 110vh;
     margin: 0;
     padding: 0;
     top: 0px;
@@ -36,7 +38,7 @@ video {
 
 .title.big {
     font-family: "Celtic";
-    font-size: 2.5em;
+    font-size: 2.5dvw;
 }
 
 .button-home {
@@ -105,6 +107,7 @@ button a {
 }
 
 .gallery{
+    width: 100%;
     align-items: center;
     padding: 2% 20%;
     background-color: FFEFD5;
@@ -144,7 +147,9 @@ button a {
 }
 
 .omg{
-    vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media(prefers-reduced-motion){
